[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/FlyoutLabel.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=8]
outline_size = 2
font_data = ExtResource( 1 )

[node name="FlyoutLabel" type="Label3D"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.143003, 0 )
billboard = 1
outline_modulate = Color( 1, 0, 0, 1 )
text = "DOUBLE SHOT"
font = SubResource( 8 )
script = ExtResource( 2 )

[node name="SizeTween" type="Tween" parent="."]

[node name="MovementTween" type="Tween" parent="."]

[node name="FadeTween" type="Tween" parent="."]

[node name="FadeTween2" type="Tween" parent="."]

[connection signal="tween_all_completed" from="SizeTween" to="." method="_on_SizeTween_tween_all_completed"]
